--- a/css/dnd.css
+++ b/css/dnd.css
@@ -1,21 +1,26 @@
 /* Drag and drop css*/
-#filedrag
-{
+#filedrag {
 	display: none;
 	font-weight: bold;
 	text-align: center;
 	padding: 1em 0;
-	margin: 1em 0;
+	/* margin: 1em 0;*/
+	height: 30%;
 	color: #555;
 	border: 2px dashed #555;
 	border-radius: 7px;
 	cursor: default;
 }
 
-#filedrag.hover
-{
+#filedrag.hover {
 	color: #f00;
 	border-color: #f00;
 	border-style: solid;
 	box-shadow: inset 0 3px 4px #888;
+}
+
+#upload {
+	margin-top:15%;
+	width:70%;
+	margin-left:15%;
 }
