--- a/css/dnd.css
+++ b/css/dnd.css
@@ -16,6 +16,12 @@
 	*/
 }
 
+#filedrag1 {
+	border: 2px dashed #555;
+	font-weight: bold;
+	text-align: center;
+	height:10em; 
+}
 
 #filedrag.hover {
 	color: #f00;
@@ -24,14 +30,25 @@
 	box-shadow: inset 0 3px 4px #888;
 }
 
+#filedrag1.hover {
+	color: rgb(0,0,255);
+	border-color: rgb(0,0,255);
+	border-style: solid;
+	box-shadow: inset 0 3px 4px #888;
+}
 
 #upload {
-	margin-top:15%;
-	width:70%;
+	margin-top:10%;
+	width:30%;
 	height: 40%;
 	margin-left:15%;
 }
 
+#upload1 {
+	width:30%;
+	float:right;
+	margin-right:15%;
+}
 #delete {
 	float:right;
 	margin-right:15%;
